crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__pipelines__parse_pipe_with_multiple_commands.snap
---
source: cash-parser/src/parser/tests/pipelines.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "ls -la | head -10 | tail -5",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "ls",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-la",
                    loc: "[location]",
                  )),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "head",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-10",
                    loc: "[location]",
                  )),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "tail",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-5",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
