crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__pipelines__parse_timed_pipeline.snap
---
source: cash-parser/src/parser/tests/pipelines.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "time echo hello",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            timed: Some(Timed(SourceSpan(
              start: SourcePosition(
                index: 0,
                line: 1,
                column: 1,
              ),
              end: SourcePosition(
                index: 4,
                line: 1,
                column: 5,
              ),
            ))),
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "hello",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
